syntax = "proto3";
package actuatorController;

//option java_multiple_files = true;
//option java_package = "vs.grpc";
//option java_outer_classname = "ActuatorProto";

service ActuatorControlService {
  rpc move(ActuatorRequest) returns (Empty);
}

message Empty {}

message ActuatorRequest {
  Direction direction = 1;
}

enum Direction {
  INCREASE = 0;
  DECREASE = 1;
}